--- a/test4.html
+++ b/test4.html
@@ -1,3 +1,13 @@
+<head>
+<script type="text/javascript">
+    (function(j,u,k,e,b,o,x){j["pfObject"]=b;j[b]=j[b]||function(){
+    (j[b].q=j[b].q||[]).push(arguments)},j[b].l=1*new Date();o=u.createElement(k),
+    x=u.getElementsByTagName(k)[0];o.async=1;o.src=e;x.parentNode.insertBefore(o,x)
+    })(window,document,'script', 'https://cdn-app.pathfactory-development.com/development2/jukebox/current/jukebox.js' ,"pf");
+      pf('create', 'LB-1BBD9567-185');
+      pf('_env', 'development2');
+  </script>
+</head>
 <h6> Test </h6>
 <p> 2020 (MMXX) was a leap year starting on Wednesday of the Gregorian calendar, the 2020th year of the Common Era (CE) and Anno Domini (AD) designations, the 20th year of the 3rd millennium and the 21st century, and the 1st year of the 2020s decade.
 
@@ -18,11 +28,4 @@ January 16 – The first impeachment trial of the President of the United States
 January 18 – Yemeni Civil War: 111 Yemeni soldiers and 5 civilians are killed in a drone and missile attack on a military camp near Maʼrib.[24]
   January 20 – COVID-19 pandemic: Chines </p>
 
-<script type="text/javascript">
-    (function(j,u,k,e,b,o,x){j["pfObject"]=b;j[b]=j[b]||function(){
-    (j[b].q=j[b].q||[]).push(arguments)},j[b].l=1*new Date();o=u.createElement(k),
-    x=u.getElementsByTagName(k)[0];o.async=1;o.src=e;x.parentNode.insertBefore(o,x)
-    })(window,document,'script', 'https://cdn-app.pathfactory-development.com/development2/jukebox/current/jukebox.js' ,"pf");
-      pf('create', 'LB-0776C41F-177');
-      pf('_env', 'development2');
-  </script>
+
